--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <ul>
               <li>
                 Scholarly Knowledge Modelling, Mining and sense Making (
-                <a target="_blank" href="http://skm.kmi.open.ac.uk">SKM3</a>) team
+                <a target="_blank" href="http://skm.kmi.open.ac.uk">SKM<sup>3</sup></a>) team
                 <ul>
                   <li> Research focusing on geopolitical and socioeconomic impact of academic research; analysis of
                     scholarly data in the broader context.
@@ -161,13 +161,13 @@
                     and research areas.</li>
                   <li> Creation and maintenance of the Computer Science Ontology (processed automatically from
                     scientific literature) and automatic classification of papers.</li>
-                  <li> Re-engineerization of the SKM\textsuperscript{3} infrastructure for scholarly knowledge
+                  <li> Re-engineerization of the SKM<sup>3</sup> infrastructure for scholarly knowledge
                     analytics: moving from a single dataset hosted on a relational database to a scalable aggregation
                     and analytics infrastructure availing of the DataHub cluster (Hadoop-based) owned by the
                     university.</li>
                   <li> Exploration of the major scholarly datasets and sources of scholarly data such as CrossRef,
                     Microsoft Academic, Dimensions, Scopus, SciGraph, SemanticScholar and DBLP.</li>
-                  <li> Management of the SKM\textsuperscript{3} Azure infrastructure for a collaboration with Microsoft
+                  <li> Management of the SKM<sup>3</sup> Azure infrastructure for a collaboration with Microsoft
                     Academics.</li>
                 </ul>
               </li>
