--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
           electric
           guitar, folding origami,
           <a target="_blank" href="https://www.flickr.com/photos/andremann">shooting pictures</a>, reading Scandinavian
-          crime novels and cooking.</p>
+          crime novels and fine cooking.</p>
       </div>
     </section>
 
