--- a/index.html
+++ b/index.html
@@ -408,6 +408,10 @@
             <i class="fa-li fas fa-graduation-cap text-normal"></i>
             Early Career Scientists programme (Research Data Alliance, RDA), 2014
           </li>
+          <li>
+              <i class="fa-li fas fa-graduation-cap text-normal"></i>
+              Cisco CCNA certification, 2007
+            </li>
         </ul>
       </div>
     </section>
