--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <a target="_blank" href="https://www.linkedin.com/in/andrea-mannocci">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
