--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
           <a href="mailto:andrea.mannocci@open.ac.uk">andrea.mannocci@open.ac.uk</a>
         </div>
         <p>
-          <span class="subheading">In a nutshell: </span>Data science, societal impact of data analysis, science of
-          science, scholarly communication
-          and scholarly knowledge mining, (research) data infrastructures.
+          <span class="subheading">In a nutshell: </span>Data scientist &amp; researcher; scholarly knowledge mining, science of
+          science, analysis of the research landscape in the broader socioeconomic and geopolitical context, (research) data infrastructures.
         </p>
         <p class="mb-5">
           <!-- <i class="fas fa-spinner"></i> Loading... :)</p> -->
