--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
+    rel="stylesheet">
   <!-- <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
   <link href="vendor/font-awesome/css/fontawesome-all.css" rel="stylesheet">
   <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
@@ -76,18 +78,22 @@
           <a href="mailto:andrea.mannocci@open.ac.uk">andrea.mannocci@open.ac.uk</a>
         </div>
         <p>
-          <span class="subheading">In a nutshell: </span>Data scientist &amp; researcher; scholarly knowledge mining, science of
-          science, analysis of the research landscape in the broader socioeconomic and geopolitical context, (research) data infrastructures.
+          <span class="subheading">In a nutshell: </span>Data scientist &amp; researcher; scholarly knowledge mining,
+          science of
+          science, analysis of the research landscape in the broader socioeconomic and geopolitical context, (research)
+          data infrastructures.
         </p>
         <p class="mb-5">
           <!-- <i class="fas fa-spinner"></i> Loading... :)</p> -->
           <i class="far fa-hand-point-right"></i> The full CV can be found
-          <a target="_blank" href="https://drive.google.com/file/d/1SzMqRhUQwX7Mvd4ab0xTPIw4EqPbXpiM/view?usp=sharing">here</a>.
+          <a target="_blank"
+            href="https://drive.google.com/file/d/1SzMqRhUQwX7Mvd4ab0xTPIw4EqPbXpiM/view?usp=sharing">here</a>.
           <p class="mb-5">
           </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a target="_blank" href="https://drive.google.com/file/d/1SzMqRhUQwX7Mvd4ab0xTPIw4EqPbXpiM/view?usp=sharing">
+              <a target="_blank"
+                href="https://drive.google.com/file/d/1SzMqRhUQwX7Mvd4ab0xTPIw4EqPbXpiM/view?usp=sharing">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fas fa-file-alt fa-stack-1x fa-inverse"></i>
@@ -145,7 +151,8 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Research Associate</h3>
-            <div class="subheading mb-3">The Knowledge Media Institute (KMi), The Open University, Milton Keynes, UK</div>
+            <div class="subheading mb-3">The Knowledge Media Institute (KMi), The Open University, Milton Keynes, UK
+            </div>
             <!-- <p><i class="fa-li fa fa-spinner"></i> Loading... :)</p> -->
             <ul>
               <li>
@@ -158,16 +165,16 @@
                     their distribution on the research landscape.</li>
                   <li> Analysis of the evolution and forecast of technologies diffusion across different disciplines
                     and research areas.</li>
-                  <li> Creation and maintenance of the Computer Science Ontology (processed automatically from
+                  <li> Creation and maintenance of the <a href="https://cso.kmi.open.ac.uk/home">Computer Science Ontology</a> (processed automatically from
                     scientific literature) and automatic classification of papers.</li>
                   <li> Re-engineerization of the SKM<sup>3</sup> infrastructure for scholarly knowledge
                     analytics: moving from a single dataset hosted on a relational database to a scalable aggregation
-                    and analytics infrastructure availing of the DataHub cluster (Hadoop-based) owned by the
-                    university.</li>
+                    and analytics infrastructure availing of the Big Data Cluster (Hadoop-based) owned by the
+                    institute.</li>
                   <li> Exploration of the major scholarly datasets and sources of scholarly data such as CrossRef,
                     Microsoft Academic, Dimensions, Scopus, SciGraph, SemanticScholar and DBLP.</li>
-                  <li> Management of the SKM<sup>3</sup> Azure infrastructure for a collaboration with Microsoft
-                    Academics.</li>
+                  <li> Management of the SKM<sup>3</sup> Azure infrastructure for a collaboration with <a
+                      target="_blank" href="https://academic.microsoft.com">Microsoft Academics</a>.</li>
                 </ul>
               </li>
               <li>Technical support and cunsultancy for the project
@@ -348,10 +355,11 @@
         </ul>
 
         <div>
-          <strong>Programming skills:</strong> Java, Python, JavaScript, C/C++, Bash scripting. Proficiency with Apache
+          <strong>Programming skills:</strong> Python, Java, JavaScript, C/C++, Bash scripting. Proficiency with Apache
           Maven and VCSs (SVN \& GIT). Advanced knowledge of Visual Studio Code, IntelliJ, Eclipse, NetBeans IDEs.
           <strong>Data science frameworks \& tools:</strong> Python notebooks, Pandas; <strong>big data</strong>:
-          Hadoop ecosystem, Hive, Spark, Map Reduce; <strong>complex networks</strong>: NetworkX, iGraph; <strong>machine
+          Hadoop ecosystem, Hive, Spark, Map Reduce; <strong>complex networks</strong>: NetworkX, iGraph;
+          <strong>machine
             learning</strong>: scikit-learn, Tensorflow/Keras; NLP: Gensim, NLTK; <strong>visualisation</strong>:
           pyplot, plotly.
           <strong>Java frameworks:</strong> proficiency with Spring framework (Core, MVC, Security), JPA and Hibernate.
@@ -408,9 +416,9 @@
             Early Career Scientists programme (Research Data Alliance, RDA), 2014
           </li>
           <li>
-              <i class="fa-li fas fa-graduation-cap text-normal"></i>
-              Cisco CCNA certification, 2007
-            </li>
+            <i class="fa-li fas fa-graduation-cap text-normal"></i>
+            Cisco CCNA certification, 2007
+          </li>
         </ul>
       </div>
     </section>
