small changes in current skm3 section

--- a/index.html
+++ b/index.html
@@ -156,21 +156,21 @@
             <!-- <p><i class="fa-li fa fa-spinner"></i> Loading... :)</p> -->
             <ul>
               <li>
-                Scholarly Knowledge Modelling, Mining and sense Making (
+                Member of the Scholarly Knowledge Modelling, Mining and sense Making (
                 <a target="_blank" href="http://skm.kmi.open.ac.uk">SKM<sup>3</sup></a>) team
                 <ul>
                   <li> Research focusing on geopolitical and socioeconomic impact of academic research; analysis of
-                    scholarly data in the broader context.
+                    scholarly data in the broader context.</li>
                   <li> Analysis of trends and dynamics within conference venues. Analysis of authors affiliations and
                     their distribution on the research landscape.</li>
-                  <li> Analysis of the evolution and forecast of technologies diffusion across different disciplines
-                    and research areas.</li>
-                  <li> Creation and maintenance of the <a href="https://cso.kmi.open.ac.uk/home">Computer Science Ontology</a> (processed automatically from
+                  <li> Analysis of the evolution and forecast of technology diffusion across different disciplines and
+                    research areas.</li>
+                  <li> Creation and maintenance of the <a target="_blank"
+                      href="https://cso.kmi.open.ac.uk/home">Computer Science Ontology</a> (automatically generated from
                     scientific literature) and automatic classification of papers.</li>
-                  <li> Re-engineerization of the SKM<sup>3</sup> infrastructure for scholarly knowledge
-                    analytics: moving from a single dataset hosted on a relational database to a scalable aggregation
-                    and analytics infrastructure availing of the Big Data Cluster (Hadoop-based) owned by the
-                    institute.</li>
+                  <li> Re-engineerization of the SKM<sup>3</sup> infrastructure for scholarly knowledge analytics:
+                    moving from a single dataset hosted on a relational database to a scalable aggregation and analytics
+                    infrastructure availing of the Big Data Cluster (Hadoop-based) owned by the university.</li>
                   <li> Exploration of the major scholarly datasets and sources of scholarly data such as CrossRef,
                     Microsoft Academic, Dimensions, Scopus, SciGraph, SemanticScholar and DBLP.</li>
                   <li> Management of the SKM<sup>3</sup> Azure infrastructure for a collaboration with <a
