fixing small glitch in the format

--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
             <!-- <p><i class="fa-li fa fa-spinner"></i> Loading... :)</p> -->
             <ul>
               <li>
-                Member of the Scholarly Knowledge Modelling, Mining and sense Making (
-                <a target="_blank" href="http://skm.kmi.open.ac.uk">SKM<sup>3</sup></a>) team
+                Member of the Scholarly Knowledge Modelling, Mining and sense Making (<a target="_blank"
+                  href="http://skm.kmi.open.ac.uk">SKM<sup>3</sup></a>) team
                 <ul>
                   <li> Research focusing on geopolitical and socioeconomic impact of academic research; analysis of
                     scholarly data in the broader context.</li>
