new job at ISTI

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="#awards">Awards &amp; noteworthy</a>
         </li>
       </ul>
     </div>
@@ -72,10 +72,10 @@
         <h1 class="mb-0">Andrea
           <span class="text-primary">Mannocci</span>
         </h1>
-        <div class="subheading mb-5">Knowledge Media Institute, The Open University, Walton Hall, Kents Hill, MK7 6AA
-          Milton Keynes, UK
+        <div class="subheading mb-5">Institute of Information Science and Technologies (ISTI), Italian National Research
+          Council (CNR), Pisa, Italy
           <br />
-          <a href="mailto:andrea.mannocci@open.ac.uk">andrea.mannocci@open.ac.uk</a>
+          <a href="mailto:andrea.mannocci@isti.cnr.it">andrea.mannocci@isti.cnr.it</a>
         </div>
         <p>
           <span class="subheading">In a nutshell: </span>Data scientist &amp; researcher; scholarly knowledge mining,
@@ -151,6 +151,30 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Research Associate</h3>
+            <div class="subheading mb-3">Institute of Information Science and Technologies (ISTI), Italian National
+              Research Council (CNR), Pisa, Italy
+            </div>
+            <!-- <p><i class="fa-li fa fa-spinner"></i> Loading... :)</p> -->
+            <ul>
+              <li>
+                Member of the <a target="_blank" href="http://nemis.isti.cnr.it/groups/infrascience">InfraScience</a>
+                research group of the <a target="_blank"
+                  href="https://www.isti.cnr.it/research/unit.php?unit=NeMIS">NeMIS</a> laboratory
+                <ul>
+                  <li> <i class="fa-li fa fa-spinner"></i> Loading... :)</li>
+
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">April 2019 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Research Associate</h3>
             <div class="subheading mb-3">The Knowledge Media Institute (KMi), The Open University, Milton Keynes, UK
             </div>
             <!-- <p><i class="fa-li fa fa-spinner"></i> Loading... :)</p> -->
@@ -184,7 +208,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">February 2017 - Present</span>
+            <span class="text-primary">February 2017 - April 2019</span>
           </div>
         </div>
 
@@ -202,7 +226,7 @@
               <li>
                 <a target="_blank" href="https://www.eagle-network.eu">EAGLE</a> technical manager: aggregation
                 workflows and data quality</li>
-              <li>Collaboration in the projects S&amp;TDL, OpenAIRE2020, OpenAIREplus,
+              <li>Collaboration in the projects, OpenAIRE2020, OpenAIREplus,
                 <a target="_blank" href="http://www.peoplesheritage.eu/content/about_hope.htm">HOPE</a>,
                 <a target="_blank" href="http://efgproject.eu/index.php">EFG</a> and iCORDI</li>
               <li>Realisation of service-oriented architectures (SOA) for data integration infrastructures</li>
@@ -397,7 +421,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
       <div class="my-auto">
-        <h2 class="mb-5">Awards, Scholarships &amp; Certifications</h2>
+        <h2 class="mb-5">Awards, Scholarships &amp; Committees</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fas fa-trophy text-warning"></i>
@@ -415,9 +439,18 @@
             <i class="fa-li fas fa-graduation-cap text-normal"></i>
             Early Career Scientists programme (Research Data Alliance, RDA), 2014
           </li>
+        </ul>
+        <br />
+        <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fas fa-graduation-cap text-normal"></i>
-            Cisco CCNA certification, 2007
+            <i class="fa-li fas fa-users"></i>
+            Invited member of the steering committee <a target="_blank" href="http://epigraphy.info">epigraphy.info</a>
+          </li>
+          <li>
+            <i class="fa-li fas fa-users"></i>
+            Program committee member for several international conferences and
+            workshops such as K-CAP 2017-2019, ESWC 2019, The Web Conference
+            2018-2019, ISWC 2017, Re:coding Black Mirror 2017-2019 workshop series, EAGLE.
           </li>
         </ul>
       </div>
