updated last job section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     rel="stylesheet">
   <!-- <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
   <link href="vendor/font-awesome/css/fontawesome-all.css" rel="stylesheet">
-  <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+
 
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
@@ -150,7 +152,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Research Associate</h3>
+            <h3 class="mb-0">Research Fellow</h3>
             <div class="subheading mb-3">Institute of Information Science and Technologies (ISTI), Italian National
               Research Council (CNR), Pisa, Italy
             </div>
@@ -161,8 +163,18 @@
                 research group of the <a target="_blank"
                   href="https://www.isti.cnr.it/research/unit.php?unit=NeMIS">NeMIS</a> laboratory
                 <ul>
-                  <li> <i class="fa-li fa fa-spinner"></i> Loading... :)</li>
-
+                  <li> Participation to the activities of the EU-funded projects <a target="_blank"
+                      href="https://www.openaire.eu/">OpenAIRE-Advance</a>.</li>
+                  <li>Research on novel metrics and indicators to measure the openness of
+                    science and evaluate the impact of scientific research.</li>
+                  <li>Data analysis of the <a target="_blank"
+                      href="https://www.openaire.eu/item/openaire-research-graph">OpenAIRE Research Graph</a> and other
+                    scholarly
+                    data sources such as ORCID, CORDIS, CrossRef.</li>
+                  <li>Comparison and evaluation of different scholarly data sources and the
+                    use-cases for analysis they are capable to support.</li>
+                  <li>Quality and completeness assessment of the information contained in
+                    the OpenAIRE Research Graph.</li>
                 </ul>
               </li>
             </ul>
@@ -353,41 +365,53 @@
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline list-icons">
           <li class="list-inline-item">
-            <i class="devicons devicons-python"></i>
+            <i class="devicon-python-plain"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-java"></i>
+            <i class="devicon-java-plain"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-database"></i>
+            <i class="devicon-mongodb-plain"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-html5"></i>
+            <i class="devicon-postgresql-plain"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-css3"></i>
+            <i class="devicon-html5-plain"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-javascript"></i>
+            <i class="devicon-bootstrap-plain"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-bootstrap"></i>
+            <i class="devicon-css3-plain"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-jquery"></i>
+            <i class="devicon-javascript-plain"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicon-angularjs-plain"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicon-git-plain"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicon-visualstudio-plain"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicon-photoshop-plain"></i>
           </li>
         </ul>
 
         <div>
           <strong>Programming skills:</strong> Python, Java, JavaScript, C/C++, Bash scripting. Proficiency with Apache
-          Maven and VCSs (SVN \& GIT). Advanced knowledge of Visual Studio Code, IntelliJ, Eclipse, NetBeans IDEs.
-          <strong>Data science frameworks \& tools:</strong> Python notebooks, Pandas; <strong>big data</strong>:
+          Maven and VCSs (SVN & GIT). Advanced knowledge of Visual Studio Code, IntelliJ, Eclipse, NetBeans IDEs.
+          <strong>Data science frameworks & tools:</strong> Python notebooks, Pandas; <strong>big data</strong>:
           Hadoop ecosystem, Hive, Spark, Map Reduce; <strong>complex networks</strong>: NetworkX, iGraph;
           <strong>machine
             learning</strong>: scikit-learn, Tensorflow/Keras; NLP: Gensim, NLTK; <strong>visualisation</strong>:
           pyplot, plotly.
           <strong>Java frameworks:</strong> proficiency with Spring framework (Core, MVC, Security), JPA and Hibernate.
-          <strong>Web development \& JS frameworks:</strong> JQuery, Bootstrap, AngularJS, CSS, Django, JSP.
+          <strong>Web development & JS frameworks:</strong> JQuery, Bootstrap, AngularJS, CSS, Django, JSP.
           <strong>Application monitoring:</strong> ELK stack (Logstash, ElasticSearch, Kibana), Prometheus.
           <strong>Markup languages:</strong> HTML, XHTML, XML (XML Schema, XPath, XQuery, XSL), LaTeX.
           <strong>Web services and web applications:</strong> SOAP, WSDL, WADL, JAX-WS, REST, JAX-RS, Apache CXF,
