--- a/index.html
+++ b/index.html
@@ -159,14 +159,11 @@
             <!-- <p><i class="fa-li fa fa-spinner"></i> Loading... :)</p> -->
             <ul>
               <li>
-                Member of the <a target="_blank" href="http://nemis.isti.cnr.it/groups/infrascience">InfraScience</a>
-                research group of the <a target="_blank"
-                  href="https://www.isti.cnr.it/research/unit.php?unit=NeMIS">NeMIS</a> laboratory
+                Member of the <a target="_blank" href="https://infrascience.isti.cnr.it">InfraScience</a>
+                laboratory
                 <ul>
-                  <li> Participation to the activities of the EU-funded projects <a target="_blank"
-                      href="https://www.openaire.eu/">OpenAIRE-Advance</a>.</li>
-                  <li>Research on novel metrics and indicators to measure the openness of
-                    science and evaluate the impact of scientific research.</li>
+                  <li> Participation to the activities of the EU-funded project <a target="_blank"
+                      href="https://www.openaire.eu/openaire-nexus-project">OpenAIRE NEXUS</a>.</li>
                   <li>Data analysis of the <a target="_blank"
                       href="https://www.openaire.eu/item/openaire-research-graph">OpenAIRE Research Graph</a> and other
                     scholarly
@@ -175,6 +172,8 @@
                     use-cases for analysis they are capable to support.</li>
                   <li>Quality and completeness assessment of the information contained in
                     the OpenAIRE Research Graph.</li>
+                    <li>Research on novel metrics and indicators to measure the openness of
+                      science and evaluate the impact of scientific research.</li>
                 </ul>
               </li>
             </ul>
