--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
       <div class="my-auto">
         <h2 class="mb-5">Interests</h2>
-        <p>Love inline skating and freestyle slalom (instructor license), windsurfing, skiing, travelling, playing
+        <p>Love inline skating and freestyle slalom (instructor license), <a target="_blank" href="https://andremann.github.io/surf-lamma">windsurfing &amp; SUP</a>, skiing, travelling, playing
           electric
           guitar, folding origami,
           <a target="_blank" href="https://www.flickr.com/photos/andremann">shooting pictures</a>, reading Scandinavian
