--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="subheading mb-5">Institute of Information Science and Technologies (ISTI), Italian National Research
           Council (CNR), Pisa, Italy
           <br />
-          <a href="mailto:andrea.mannocci@isti.cnr.it">andrea.mannocci@isti.cnr.it</a>
+          <a href="javascript:location='mailto:\u0061\u006e\u0064\u0072\u0065\u0061\u002e\u006d\u0061\u006e\u006e\u006f\u0063\u0063\u0069\u0040\u0069\u0073\u0074\u0069\u002e\u0063\u006e\u0072\u002e\u0069\u0074';void 0">andrea.mannocci [at] isti.cnr.it</a>
         </div>
         <p>
           <span class="subheading">In a nutshell: </span>Data scientist &amp; researcher; scholarly knowledge mining,
