--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <p>
           <span class="subheading">In a nutshell: </span>Data scientist &amp; researcher; scholarly knowledge mining,
-          science of
+          scientometrics, science of
           science, analysis of the research landscape in the broader socioeconomic and geopolitical context, (research)
           data infrastructures.
         </p>
